--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,13 @@
-# BUILD
+### STAGE 1: Build ###
 FROM node:12.7-alpine AS build
-WORKDIR /opt/frontend
+WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# RUN
+### STAGE 2: Run ###
 FROM nginx:1.17.1-alpine
 COPY default.conf /etc/nginx/conf.d/default.conf
-COPY --from=build /opt/frontend/dist/frontend /usr/share/nginx/html
-EXPOSE 4200
+COPY --from=build /usr/src/app/dist/frontend /usr/share/nginx/html
+EXPOSE 80
