Banco de dados H2 e criacao automatica da base de dados

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,24 @@
 server.servlet.context-path=/api
 
-spring.datasource.url=jdbc:postgresql://${DB_SERVER}/${POSTGRES_DB}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
-spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# datasource H2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+ 
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+ 
+# h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# propert de DEV
+#spring.datasource.url=jdbc:postgresql://${DB_SERVER}/${POSTGRES_DB}
+#spring.datasource.username=${POSTGRES_USER}
+#spring.datasource.password=${POSTGRES_PASSWORD}
+#spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
