--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -4,12 +4,8 @@ server {
     root /usr/share/nginx/html;
     index index.html index.html;
 
-    location /api/scrums {
-        proxy_pass http://backend:8080/api/scrums;
-    }
-
-    location /api/tasks {
-        proxy_pass http://backend:8080/api/tasks;
+    location /api/categorias {
+        proxy_pass http://backend:8080/api/categorias;
     }
 
     location / {
